--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@capacitor/android": "^3.1.1",
     "@capacitor/cli": "^3.1.1",
     "@capacitor/core": "^3.1.1",
+    "@codetrix-studio/capacitor-google-auth": "^3.0.2",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
