--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -12,5 +12,8 @@
 			"serverClientId": "450429795824-6ms86sk1kispv9hn8jf53t3lf4ij2sk9.apps.googleusercontent.com",
 			"forceCodeForRefreshToken": true
 		}
+	},
+	"server": {
+		"cleartext": true
 	}
 }
