--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@capacitor/toast": "^1.0.2",
     "@codetrix-studio/capacitor-google-auth": "^3.0.2",
     "core-js": "^3.6.5",
+    "mobile-pull-to-refresh": "^0.2.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
